[gd_scene load_steps=3 format=3 uid="uid://d2j3rg4f5xnau"]

[ext_resource type="Script" path="res://Scripts/nightShop.gd" id="1_0wg31"]
[ext_resource type="Theme" uid="uid://c4l3g5vcxwkhn" path="res://Assets/Themes/NightMenuTheme.tres" id="1_lylop"]

[node name="NightShop" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lylop")
script = ExtResource("1_0wg31")

[node name="ShopNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -364.0
offset_right = 364.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Ingredients Shop Name"

[node name="TotalInfoVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.5
offset_top = -188.0
offset_right = 141.5
grow_horizontal = 2
grow_vertical = 0

[node name="TotalCostLabel" type="Label" parent="TotalInfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Total $0"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="TotalInfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Buy"

[node name="OfferingsHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_right = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[connection signal="pressed" from="TotalInfoVBox/BuyButton" to="." method="_on_buy_button_pressed"]
